2014-03-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h - Display more help items when the terminal is wider.

2014-03-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main) - When in a UTF-8 locale, use prettier characters
	(»·) for indicating whitespace, and for similarity use ">." instead of
	":." when not in a UTF-8 locale.  Changes suggested by Mike Frysinger.

2014-03-05  Benno Schulenberg  <bensberg@justemail.net>
	* src/move.c (do_down) - Initialize the correct variable to zero.
	Solves jumpy scrolling behaviour reported by Chris Allegretta .

2014-03-04 Chris Allegretta <chrisa@asty.org>
	* global.c (first_sc_for) - Return raw keystrokes last, so
	  they will not be displayed if there are F-key or Meta keys
	  mapped for an item in the shortcut list.

2014-03-04  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/nanorc.nanorc - Add keyword 'quiet', sort 'locking',
	and concatenate the two separate strings into one.
	* src/nano.c (main), doc/nanorc.sample.in - Make the M-P toggle
	actually do something by default, by using visible characters.
	* src/global.c (shortcut_init) - Normalize the writing of three
	help-line items: "Write Out", "Uncut Text", and "Unjustify", to
	better stress the O and U -- the big C and J were distracting.
	* doc/{syntax/nanorc.nanorc,man/nanorc.5,texinfo/nano.texi} -
	Remove erroneous 'suspendenable' -- it is not a settable option
	but a bindable function.

2014-03-01 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init) - Don't actually free the shortcut
	  list, since the next pass via justifying will then remove
	  all custom shortcuts.  Fixed bug discovered by Benno Schulenberg.
	* text.c (do_linter) - Remove some unused variables to quiet
	  -pedanic -Wall.

2014-03-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (add_to_funcs) - Add a newline, for clarity.
	* src/global.c (shortcut_init) - Mark, don't translate yet.