@@ -1,3 +1,7 @@
+2014-03-17  Benno Schulenberg  <bensberg@justemail.net>
+	* src/global.c (shortcut_init) - Show ^F and ^B instead of kright
+	and kleft in the help lines of the tiny version.
+
 2014-03-16  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.h - Display more help items when the terminal is wider.
 
